After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703269 - Compilation warnings are not active
Compilation warnings are not active
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-06-28 16:12 UTC by Emanuele Aina
Modified: 2013-07-09 16:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix missing function prototypes errors (3.91 KB, patch)
2013-06-28 16:12 UTC, Emanuele Aina
committed Details | Review
build: Really enable strict compiler warnings (749 bytes, patch)
2013-06-28 16:12 UTC, Emanuele Aina
committed Details | Review
Fix compilation warnings, mostly unused variables (15.37 KB, patch)
2013-06-28 16:12 UTC, Emanuele Aina
none Details | Review
Fix compilation warnings, mostly unused variables (15.52 KB, patch)
2013-07-09 16:16 UTC, Debarshi Ray
committed Details | Review

Description Emanuele Aina 2013-06-28 16:12:29 UTC
The GNOME_COMPILE_WARNINGS macro is called in configure.ac but the WARN_CFLAGS
variable is not used in any Makefile.
Comment 1 Emanuele Aina 2013-06-28 16:12:32 UTC
Created attachment 247998 [details] [review]
Fix missing function prototypes errors

Prepare for enabling compiler warnings without breaking the build
since GNOME_COMPILE_WARNINGS uses -Werror=missing-prototypes.
Comment 2 Emanuele Aina 2013-06-28 16:12:38 UTC
Created attachment 247999 [details] [review]
build: Really enable strict compiler warnings

The GNOME_COMPILE_WARNINGS macro was used but the produced WARN_CFLAGS
variable was not and no strict warning was enforced.
Comment 3 Emanuele Aina 2013-06-28 16:12:47 UTC
Created attachment 248000 [details] [review]
Fix compilation warnings, mostly unused variables
Comment 4 Debarshi Ray 2013-07-09 16:16:49 UTC
Created attachment 248745 [details] [review]
Fix compilation warnings, mostly unused variables

Rebased on top of current master.
Comment 5 Debarshi Ray 2013-07-09 16:17:21 UTC
Thanks a lot for the patches!