Fix missing function prototypes errors

Prepare for enabling compiler warnings without breaking the build
since GNOME_COMPILE_WARNINGS uses -Werror=missing-prototypes.

https://bugzilla.gnome.org/show_bug.cgi?id=703269